# SupplyManager

./: .gitignore  PLAN.md  README.md  pyproject.toml  refacto.md  setup_script.iss  temp_forms_content.txt  temp_forms_supply.txt
src/: db.sqlite3  manage.py  run_supplymanager.py
src/LaundryWatcher/: asgi.py  settings.py  urls.py  wsgi.py
src/LaundryWatcher/templates/: base.html  base_sensible_form.html  base_usr_form.html
src/authentication/: admin.py  decorators.py  forms.py  middleware.py  models.py  tests.py  views.py
src/authentication/management/: __init__.py
src/authentication/migrations/: 0001_initial.py  0002_alter_user_role.py  0003_user_created_by_user_date_end_contract_and_more.py  0004_alter_user_username.py  0005_alter_user_username.py  0006_alter_user_options_user_user_role_idx_and_more.py  0007_alter_user_managers.py
src/authentication/templates/: change_password.html  change_user.html  create_user.html  login.html  password_change_done.html
src/authentication/templatetags/: auth_extras.py
src/core/: exports.py  exports_monthly.py  forms.py  services.py  tests.py  urls.py  views.py
src/core/templates/: change_inventory.html  dashboard.html  help.html  home.html  inventory_sheet.html  staff_management.html  suppliers_management.html  supplies_management.html
src/core/views/: __init__.py  dashboard.py  exports.py  inventory.py  management.py
src/static/css/: dashboard.css
src/supplier/: admin.py  forms.py  models.py  services.py  tests.py  views.py
src/supply/: admin.py  forms.py  models.py  services.py  tests.py  views.py
(+51 files in other folders)
